fix(idp): preserve sorted oauth scopes